# concrete_block_perception_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_PERCEPTION_MODES.md  package.xml
action/: RegisterBlock.action
config/: block_detection_tracking.yaml  block_registration.yaml  lifecycle_manager.yaml  world_model.yaml  world_model_seed_pick_place.yaml
config/templates/: top.pcd  top.ply  top.yaml  top_front_long.pcd  top_front_long.ply  top_front_long.yaml  top_front_short.pcd  top_front_short.ply  top_front_short.yaml  top_front_short_left.pcd  top_front_short_left.ply  top_front_short_left.yaml  top_front_short_right.pcd  top_front_short_right.ply  top_front_short_right.yaml
docs/: TEASER_BACKEND.md  bt_perception_api_design.md  marker_color_coding.md  vision_pipeline_modes.md
include/concrete_block_perception/: block_utils.hpp  debug_utils.hpp  detection_association.hpp  img_utils.hpp  io_utils.hpp
include/concrete_block_perception/detection/: block_detection_tracker.hpp  detection_config.hpp  detection_params.hpp
include/concrete_block_perception/nodes/: perception_orchestrator_node.hpp
include/concrete_block_perception/registration/: block_registration_pipeline.hpp  registration_config.hpp  registration_params.hpp  ros_debug_helpers.hpp
include/concrete_block_perception/tracking/: damped_cv_kalman_filter.hpp  gating.hpp  hungarian.hpp  logger.hpp  measurement.hpp  multi_object_tracker.hpp  track.hpp  tracker_config.hpp
include/concrete_block_perception/utils/: coarse_pose_utils.hpp  debug_utils.hpp  detection_association.hpp  img_utils.hpp  visu_utils.hpp  world_model_utils.hpp
include/concrete_block_perception/world_model/: config_loader.hpp  refine_flow.hpp  registration_flow.hpp  roi_processing.hpp  scene_discovery_flow.hpp  state_manager.hpp
launch/: block_registration.launch.py  commissioning.launch.py  detection_tracking.launch.py  perception.launch.py  rosbag_block_world_model.launch.py  rosbag_block_world_model_test_modes.launch.py  rosbag_replay.launch.py  world_node.launch.py
msg/: PlanningScene.msg  TrackedDetection.msg  TrackedDetectionArray.msg
scripts/: compare_backend_results.py  detection_node.py  run_pose_estimation_benchmark.py  segmentation_node.py
src/: block_detection_tracking_node.cpp  block_registration_node.cpp  block_utils.cpp  debug_utils.cpp  detection_association.cpp  img_utils.cpp  io_utils.cpp  visu_utils.cpp  world_model_node.cpp
src/detection/: block_detection_tracker.cpp  detection_config.cpp
src/nodes/: block_detection_tracking_node.cpp  block_registration_node.cpp  perception_orchestrator_core.cpp  perception_orchestrator_node.cpp  perception_orchestrator_pipeline.cpp  perception_orchestrator_services.cpp  perception_orchestrator_tf_roi.cpp  tf_logger_node.cpp  world_model_node.cpp  world_model_node_helpers.inc  world_model_node_refine_methods.inc  world_model_node_runtime.inc
src/registration/: block_registration_pipeline.cpp  registration_config.cpp  ros_debug_helpers.cpp
src/tracking/: damped_cv_kalman_filter.cpp  gating.cpp  hungarian.cpp  multi_object_tracker.cpp
src/utils/: block_utils.cpp  coarse_pose_utils.cpp  detection_association.cpp  img_utils.cpp  io_utils.cpp  visu_utils.cpp  world_model_utils.cpp
src/world_model/: config_loader.cpp  refine_flow.cpp  registration_flow.cpp  roi_processing.cpp  roi_refinement.cpp  scene_discovery_flow.cpp  state_manager.cpp
srv/: GetCoarseBlocks.srv  GetPlanningScene.srv  RegisterBlock.srv  RunPoseEstimation.srv  SegmentAtPoint.srv  TrackDetections.srv
test/: test_segmentation_node.py  test_world_model_utils.cpp
